--- a/src/style.css
+++ b/src/style.css
@@ -174,8 +174,9 @@ section .title::after{
     flex-basis: 25%;
 }
 .member .mem-content .row .mem img{
-    width: 250px;
-    height: 150px;
+    width: 200px;
+    height: 250px;
+    border:  3px solid darkgoldenrod;
     border-radius: 6px;
     display: block;
     margin: 0 auto;
